compiler/toc-hir-lowering/tests/snapshots/lowering__lower_for_stmt-5.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "\n    for woo : 1 .. 10 var k := woo end for\n    var woo := 1.0\n    "

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(2)
    Module@(FileId(1), 0..67): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..62): []
        For@(FileId(1), 5..43): explicit
          Literal@(FileId(1), 15..16): Integer(1)
          Literal@(FileId(1), 20..22): Integer(10)
          StmtItem@(FileId(1), 23..35): ItemId(0)
            ConstVar@(FileId(1), 23..35): var "k"@(FileId(1), 27..28)
              ExprBody@(FileId(1), 32..35)
                Name@(FileId(1), 32..35): "woo"@(FileId(1), 9..12)
        StmtItem@(FileId(1), 48..62): ItemId(1)
          ConstVar@(FileId(1), 48..62): var "woo"@(FileId(1), 52..55)
            ExprBody@(FileId(1), 59..62)
              Literal@(FileId(1), 59..62): Real(1.0)

