compiler/toc-hir-lowering/tests/snapshots/lowering__lower_for_stmt-8.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "for : end for"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(0)
    Module@(src/main.t:0..13): "<root>"@(dummy)
      StmtBody@(src/main.t:0..13): []
        For@(src/main.t:0..13): explicit
error at src/main.t:6..9: unexpected token
| error for src/main.t:6..9: expected expression, but found `end`
