compiler/toc-hir-lowering/tests/snapshots/lowering__lower_for_stmt-9.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "for decreasing : end for"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..24): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..24): []
        For@(FileId(1), 0..24): decreasing explicit
error at (FileId(1), 17..20): unexpected token
| error for (FileId(1), 17..20): expected expression, but found `end`

