compiler/toc-hir-lowering/tests/snapshots/lowering__lower_formals_intersperse_missing-3.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "procedure args(a, , , , : int) end args"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..39): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..39): []
        StmtItem@(FileId(1), 0..39): ItemId(0)
          Subprogram@(FileId(1), 0..39): "args"@(FileId(1), 10..14) [
            "a"@(FileId(1), 15..16),
            "<unnamed>"@(dummy),
            "<unnamed>"@(dummy),
            "<unnamed>"@(dummy)
          ]
            Primitive@(FileId(1), 26..29): Int
            Primitive@(FileId(1), 26..29): Int
            Primitive@(FileId(1), 26..29): Int
            Primitive@(FileId(1), 26..29): Int
            Void@(FileId(1), 0..30)
            StmtBody@(FileId(1), 31..31): ["a"@(FileId(1), 15..16), "<unnamed>"@(dummy), "<unnamed>"@(dummy), "<unnamed>"@(dummy)]
error in file FileId(1) at 18..19: unexpected token
| error in file FileId(1) for 18..19: expected identifier, but found `,`
error in file FileId(1) at 20..21: unexpected token
| error in file FileId(1) for 20..21: expected identifier, but found `,`
error in file FileId(1) at 22..23: unexpected token
| error in file FileId(1) for 22..23: expected identifier, but found `,`
error in file FileId(1) at 24..25: unexpected token
| error in file FileId(1) for 24..25: expected identifier, but found `:`

