compiler/toc-hir-lowering/tests/snapshots/lowering__lower_formals_intersperse_missing.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "procedure args(sa, : int) end args"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..34): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..34): []
        StmtItem@(FileId(1), 0..34): ItemId(0)
          Subprogram@(FileId(1), 0..34): "args"@(FileId(1), 10..14) ["sa"@(FileId(1), 15..17)]
            Primitive@(FileId(1), 21..24): Int
            Void@(FileId(1), 0..25)
            StmtBody@(FileId(1), 26..26): ["sa"@(FileId(1), 15..17)]
error at (FileId(1), 19..20): unexpected token
| error for (FileId(1), 19..20): expected identifier, but found `:`

